working for #64 and registering listener
